--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </header>
   </head>
   <body>
-    
+    <h2>Our Story</h2>
+    <p>Our founders would eat a sad meal every day adn therefore have a sad day. The common denominator was that there was no fun element, just boring colors. They decided to give you a "colorful experience you will never forget". That's the story of RainBeau</p>
   </body>
 </html>
