--- a/index.html
+++ b/index.html
@@ -11,7 +11,36 @@
     </header>
   </head>
   <body>
-    <h2>Our Story</h2>
-    <p>Our founders would eat a sad meal every day adn therefore have a sad day. The common denominator was that there was no fun element, just boring colors. They decided to give you a "colorful experience you will never forget". That's the story of RainBeau</p>
+       <h1>Welcome, it's our pleasure to have you here!</h1>
+    <hr>
+    <h1>Our Story</h1>
+    <br>
+    <p>Our founders would eat a sad meal every day and therefore have a sad day. The common denominator was that there was no fun element, just boring colors. They decided to give you a "colorful experience you will never forget". That's the story of RainBeau.</p>
+    <br>
+    <hr>
+    <h1>Breakfast</h1>
+    <br>
+    <img src="rainbowacaibowl" alt="rainbow acai bowl">
+    <img src="purplefrenchtoast" alt="purple french toast">
+    <img src="pastelpancakes" alt="pastel pancakes">
+    <img src="rainbowcrepes" alt="rainbow crepes">
+    <br>
+    <hr>
+    <h1>Lunch</h1>
+    <br>
+    <img src="unicornspaghetti" alt="unicorn spaghetti">
+    <img src="rainbowgrilledcheese" alt="rainbow grilled cheese">
+    <img src="veggierainbowpizza" alt="veggie rainbow pizza">
+    <img src="secondarycolorsalad" alt="secondary color salad">
+    <br>
+    <hr>
+    <h1>Dessert</h1>
+    <br>
+    <img src="colorfulcannolis" alt="colorful cannolis">
+    <img src="galaxylemonadeslush" alt="galaxy lemonade slush">
+    <img src="pastelswirlmacarons" alt="pastel swirl macarons">
+    <img src="vibrantpie" alt="vibrant pie">
+    <br>
+    <hr>
   </body>
 </html>
