--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     </title>
     <header>
       <nav>
-        <img src="headerlogo.png" alt="headerlogo">
+        <img src="Rainbeau.png" alt="rainbeau">
       </nav>
     </header>
   </head>
   <body>
-       <h1>Welcome, it's our pleasure to have you here!</h1>
+    <h1>Welcome, it's our pleasure to have you here!</h1>
     <hr>
     <h1>Our Story</h1>
     <br>
@@ -20,26 +20,58 @@
     <hr>
     <h1>Breakfast</h1>
     <br>
+    <figure>
     <img src="rainbowacaibowl" alt="rainbow acai bowl">
+      <figcaption>Rainbow Acai Bowl <br>$6</figcaption>
+    </figure>
+    <figure>
     <img src="purplefrenchtoast" alt="purple french toast">
+    <figcaption>Purple French Toast<br>$8</figcaption>
+    </figure>
+    <figure>
     <img src="pastelpancakes" alt="pastel pancakes">
+    <figcaption>Pastel Pancakes<br>$5 a stack</figcaption>
+    </figure>
+    <figure>
     <img src="rainbowcrepes" alt="rainbow crepes">
+    <figcaption>Rainbow Crepes<br>$5 a stack</figcaption>
+      </figure>
     <br>
     <hr>
     <h1>Lunch</h1>
     <br>
+    <figure>
     <img src="unicornspaghetti" alt="unicorn spaghetti">
+    <figcaption>Unicorn Spaghetti<br>$12</figcaption>
+    </figure>
+    <figure>
     <img src="rainbowgrilledcheese" alt="rainbow grilled cheese">
+    <figcaption>Rainbow Grilled Cheese<br>$10</figcaption>
+    </figure>
+    <figure>
     <img src="veggierainbowpizza" alt="veggie rainbow pizza">
+    <figcaption>Veggie Rainbow Pizza<br>$7 a slice<br>$24 for a whole pie</figcaption>
+    </figure>
+    <figure>
     <img src="secondarycolorsalad" alt="secondary color salad">
+    <figcaption></figcaption>
+    </figure>
     <br>
     <hr>
     <h1>Dessert</h1>
     <br>
+    <figure>
     <img src="colorfulcannolis" alt="colorful cannolis">
+      <figcaption>Colorful Cannolis <br> $3 each</figcaption>
+    </figure>
+    <figure>
     <img src="galaxylemonadeslush" alt="galaxy lemonade slush">
+    <figcaption>Galaxy Lemonade Slush <br> $5.75</figcaption>
+    </figure>
     <img src="pastelswirlmacarons" alt="pastel swirl macarons">
+    <figcaption>Pastel Swirl Macarons<br> $2 each</figcaption>
     <img src="vibrantpie" alt="vibrant pie">
+    <figcaption>Vibrant Pie <br>$4.50 a slice<br>$20 for the whole pie</figcaption>
     <br>
     <hr>
   </body>
