--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </figure>
     <img src="pastelswirlmacarons.png" alt="pastel swirl macarons">
     <figcaption>Pastel Swirl Macarons<br> $2 each</figcaption>
-    <img src="vibrantpie" alt="vibrant pie">
+    <img src="vibrantpie.png" alt="vibrant pie">
     <figcaption>Vibrant Pie <br>$4.50 a slice<br>$20 for the whole pie</figcaption>
     <br>
     <hr>
