--- a/index.html
+++ b/index.html
@@ -1,78 +1,90 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>
-      Rainbeau
-    </title>
-    <header>
-      <nav>
-        <img src="Rainbeau.png" alt="rainbeau">
-      </nav>
-    </header>
-  </head>
-  <body>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <nav>
+      <img src="Rainbeau.png" alt="Rainbeau Logo">
+    </nav>
+  </header>
+
+  <main>
     <h1>Welcome, it's our pleasure to have you here!</h1>
     <hr>
+
     <h1>Our Story</h1>
-    <br>
-    <p>Our founders would eat a sad meal every day and therefore have a sad day. The common denominator was that there was no fun element, just boring colors. They decided to give you a "colorful experience you will never forget". That's the story of RainBeau.</p>
-    <br>
+    <p>
+      Our founders would eat a sad meal every day and therefore have a sad day. 
+      The common denominator was that there was no fun element, just boring colors. 
+      They decided to give you a "colorful experience you will never forget". 
+      That's the story of RainBeau.
+    </p>
     <hr>
+
     <h1>Breakfast</h1>
-    <br>
-    <figure>
-    <img src="rainbowacaibowl.png" alt="rainbow acai bowl">
-      <figcaption>Rainbow Acai Bowl <br>$6</figcaption>
-    </figure>
-    <figure>
-    <img src="purplefrenchtoast.png" alt="purple french toast">
-    <figcaption>Purple French Toast<br>$8</figcaption>
-    </figure>
-    <figure>
-    <img src="pastelpancakes.png" alt="pastel pancakes">
-    <figcaption>Pastel Pancakes<br>$5 a stack</figcaption>
-    </figure>
-    <figure>
-    <img src="rainbowcrepes.png" alt="rainbow crepes">
-    <figcaption>Rainbow Crepes<br>$5 a stack</figcaption>
+    <section class="menu">
+      <figure>
+        <img src="rainbowacaibowl.png" alt="rainbow acai bowl">
+        <figcaption>Rainbow Acai Bowl <br><span class="price">$6</span></figcaption>
       </figure>
-    <br>
+      <figure>
+        <img src="purplefrenchtoast.png" alt="purple french toast">
+        <figcaption>Purple French Toast <br><span class="price">$8</span></figcaption>
+      </figure>
+      <figure>
+        <img src="pastelpancakes.png" alt="pastel pancakes">
+        <figcaption>Pastel Pancakes <br><span class="price">$5 a stack</span></figcaption>
+      </figure>
+      <figure>
+        <img src="rainbowcrepes.png" alt="rainbow crepes">
+        <figcaption>Rainbow Crepes <br><span class="price">$5 a stack</span></figcaption>
+      </figure>
+    </section>
     <hr>
+
     <h1>Lunch</h1>
-    <br>
-    <figure>
-    <img src="unicornspaghetti.png" alt="unicorn spaghetti">
-    <figcaption>Unicorn Spaghetti<br>$12</figcaption>
-    </figure>
-    <figure>
-    <img src="rainbowgrilledcheese.png" alt="rainbow grilled cheese">
-    <figcaption>Rainbow Grilled Cheese<br>$10</figcaption>
-    </figure>
-    <figure>
-    <img src="veggierainbowpizza.png" alt="veggie rainbow pizza">
-    <figcaption>Veggie Rainbow Pizza<br>$7 a slice<br>$24 for a whole pie</figcaption>
-    </figure>
-    <figure>
-    <img src="secondarycolorsalad.png" alt="secondary color salad">
-    <figcaption></figcaption>
-    </figure>
-    <br>
+    <section class="menu">
+      <figure>
+        <img src="unicornspaghetti.png" alt="unicorn spaghetti">
+        <figcaption>Unicorn Spaghetti <br><span class="price">$12</span></figcaption>
+      </figure>
+      <figure>
+        <img src="rainbowgrilledcheese.png" alt="rainbow grilled cheese">
+        <figcaption>Rainbow Grilled Cheese <br><span class="price">$10</span></figcaption>
+      </figure>
+      <figure>
+        <img src="veggierainbowpizza.png" alt="veggie rainbow pizza">
+        <figcaption>Veggie Rainbow Pizza <br><span class="price">$7 a slice</span><br><span class="price">$24 for a whole pie</span></figcaption>
+      </figure>
+      <figure>
+        <img src="secondarycolorsalad.png" alt="secondary color salad">
+        <figcaption>Secondary Color Salad <br><span class="price">TBD</span></figcaption>
+      </figure>
+    </section>
     <hr>
+
     <h1>Dessert</h1>
-    <br>
-    <figure>
-    <img src="colorfulcannolis.png" alt="colorful cannolis">
-      <figcaption>Colorful Cannolis <br> $3 each</figcaption>
-    </figure>
-    <figure>
-    <img src="galaxylemonadeslush.png" alt="galaxy lemonade slush">
-    <figcaption>Galaxy Lemonade Slush <br> $5.75</figcaption>
-    </figure>
-    <img src="pastelswirlmacarons.png" alt="pastel swirl macarons">
-    <figcaption>Pastel Swirl Macarons<br> $2 each</figcaption>
-    <img src="vibrantpie.png" alt="vibrant pie">
-    <figcaption>Vibrant Pie <br>$4.50 a slice<br>$20 for the whole pie</figcaption>
-    <br>
+    <section class="menu">
+      <figure>
+        <img src="colorfulcannolis.png" alt="colorful cannolis">
+        <figcaption>Colorful Cannolis <br><span class="price">$3 each</span></figcaption>
+      </figure>
+      <figure>
+        <img src="galaxylemonadeslush.png" alt="galaxy lemonade slush">
+        <figcaption>Galaxy Lemonade Slush <br><span class="price">$5.75</span></figcaption>
+      </figure>
+      <figure>
+        <img src="pastelswirlmacarons.png" alt="pastel swirl macarons">
+        <figcaption>Pastel Swirl Macarons <br><span class="price">$2 each</span></figcaption>
+      </figure>
+      <figure>
+        <img src="vibrantpie.png" alt="vibrant pie">
+        <figcaption>Vibrant Pie <br><span class="price">$4.50 a slice</span><br><span class="price">$20 for the whole pie</span></figcaption>
+      </figure>
+    </section>
     <hr>
-  </body>
+  </main>
+</body>
 </html>
