--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </figure>
       <figure>
         <img src="secondarycolorsalad.png" alt="secondary color salad">
-        <figcaption>Secondary Color Salad <br><span class="price">TBD</span></figcaption>
+        <figcaption>Secondary Color Salad <br><span class="price">$14</span></figcaption>
       </figure>
     </section>
     <hr>
