--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
       <img src="Rainbeau.png" alt="Rainbeau Logo">
     </nav>
   </header>
-
+<ul>
+  <li><a href="#welcome">Welcome</a></li>
+  <li><a href="#welcome">Welcome</a></li>
+  <li><a href="#welcome">Welcome</a></li>
+  <li><a href="#welcome">Welcome</a></li>
+</ul>
   <main>
     <h1>Welcome, it's our pleasure to have you here!</h1>
     <hr>
@@ -86,5 +91,11 @@
     </section>
     <hr>
   </main>
+  <h1>Contact Us</h1>
+  <p>Phone: (123)-456-7890
+    <br> Email: Rainbeaucontact@rainbow
+  </p>
+  <h1>Yes, We do deliver!</h1>
+  <p>We reside at: 123-45 Rainbow St</p>
 </body>
 </html>
