--- a/index.html
+++ b/index.html
@@ -11,20 +11,23 @@
   </header>
 <ul>
   <li><a href="#welcome">Welcome</a></li>
-  <li><a href="#welcome">Welcome</a></li>
-  <li><a href="#welcome">Welcome</a></li>
-  <li><a href="#welcome">Welcome</a></li>
+  <li><a href="#ourstory">Our Story</a></li>
+  <li><a href="#menu">Menu</a></li>
+  <li><a href="#contactus">Contact Us</a></li>
 </ul>
   <main>
+    <section class="welcome">
     <h1>Welcome, it's our pleasure to have you here!</h1>
+  </section>
     <hr>
-
+<section class="ourstory">
     <h1>Our Story</h1>
     <p>
       Our founders would eat a sad meal every day and therefore have a sad day. 
       The common denominator was that there was no fun element, just boring colors. 
       They decided to give you a "colorful experience you will never forget". 
       That's the story of RainBeau.
+    </section>
     </p>
     <hr>
 
@@ -91,11 +94,13 @@
     </section>
     <hr>
   </main>
+  <section class="contactus">
   <h1>Contact Us</h1>
   <p>Phone: (123)-456-7890
     <br> Email: Rainbeaucontact@rainbow
   </p>
   <h1>Yes, We do deliver!</h1>
   <p>We reside at: 123-45 Rainbow St</p>
+  
 </body>
 </html>
