--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <section class="contactus">
   <h1>Contact Us</h1>
   <p>Phone: (123)-456-7890
-    <br> Email: Rainbeaucontact@rainbow
+    <br> Email: Rainbeaucontact@rainbow.com
   </p>
   <h1>Yes, We do deliver!</h1>
   <p>We reside at: 123-45 Rainbow St</p>
