--- a/index.html
+++ b/index.html
@@ -94,13 +94,15 @@
     </section>
     <hr>
   </main>
-  <section class="contactus">
+</section>
+<a name="contactus">
   <h1>Contact Us</h1>
   <p>Phone: (123)-456-7890
     <br> Email: Rainbeaucontact@rainbow.com
   </p>
   <h1>Yes, We do deliver!</h1>
   <p>We reside at: 123-45 Rainbow St</p>
+</a>
   
 </body>
 </html>
