--- a/index.html
+++ b/index.html
@@ -17,22 +17,28 @@
 </ul>
   <main>
     <section class="welcome">
+      <a name="welcome">
     <h1>Welcome, it's our pleasure to have you here!</h1>
+  </a>
+    
   </section>
     <hr>
 <section class="ourstory">
+  <a name="ourstory">
     <h1>Our Story</h1>
     <p>
       Our founders would eat a sad meal every day and therefore have a sad day. 
       The common denominator was that there was no fun element, just boring colors. 
       They decided to give you a "colorful experience you will never forget". 
       That's the story of RainBeau.
+    </a>
     </section>
     </p>
     <hr>
 
     <h1>Breakfast</h1>
     <section class="menu">
+      <a name="menu">
       <figure>
         <img src="rainbowacaibowl.png" alt="rainbow acai bowl">
         <figcaption>Rainbow Acai Bowl <br><span class="price">$6</span></figcaption>
@@ -49,7 +55,9 @@
         <img src="rainbowcrepes.png" alt="rainbow crepes">
         <figcaption>Rainbow Crepes <br><span class="price">$5 a stack</span></figcaption>
       </figure>
+    </a>
     </section>
+  
     <hr>
 
     <h1>Lunch</h1>
