--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <img src="rainbowcrepes.png" alt="rainbow crepes">
         <figcaption>Rainbow Crepes <br><span class="price">$5 a stack</span></figcaption>
       </figure>
-    </a>
+    
     </section>
   
     <hr>
@@ -99,7 +99,8 @@
         <img src="vibrantpie.png" alt="vibrant pie">
         <figcaption>Vibrant Pie <br><span class="price">$4.50 a slice</span><br><span class="price">$20 for the whole pie</span></figcaption>
       </figure>
-    </section>
+    </section><
+    /a>
     <hr>
   </main>
 </section>
